--- a/home.html
+++ b/home.html
@@ -42,35 +42,20 @@
     <footer>
       <p>&copy; 2024 Healthcare System. All Rights Reserved.</p>
     </footer>
-    <script src="healthcare-scripts.js"></script>
-
+    <script src="api.js"></script>
+    <script src="auth.js"></script>
     <script>
-      // Add this script after your existing scripts
-      document.addEventListener("DOMContentLoaded", () => {
-        const userInfo = document.getElementById("userInfo");
-        const loginBtn = document.getElementById("loginBtn");
-        const logoutBtn = document.getElementById("logoutBtn");
+      // Initialize when DOM is ready
+      function initializePage() {
+        console.log("Initializing page...");
+        updateNavigation();
+      }
 
-        // Check if user is logged in
-        const user = JSON.parse(localStorage.getItem("user"));
-        if (user) {
-          userInfo.textContent = `Welcome, ${user.name}!`;
-          loginBtn.style.display = "none";
-          logoutBtn.style.display = "block";
-        } else {
-          userInfo.textContent = "No account logged in";
-          loginBtn.style.display = "block";
-          logoutBtn.style.display = "none";
-        }
-
-        // Handle logout
-        document
-          .getElementById("logoutButton")
-          .addEventListener("click", () => {
-            localStorage.removeItem("user");
-            window.location.href = "login.html";
-          });
-      });
+      if (document.readyState === "loading") {
+        document.addEventListener("DOMContentLoaded", initializePage);
+      } else {
+        initializePage();
+      }
     </script>
   </body>
 </html>
